<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_difficulty_section">
        <ListPreference
            android:defaultValue="@string/difficulty_easy"
            android:dialogTitle="@string/difficulty_list_preference"
            android:entries="@array/game_difficulty_names_array"
            android:entryValues="@array/game_difficulty_values_array"
            android:key="list_preference"
            android:summary="@string/summary_gamedifficulty_preference"
            android:title="@string/title_list_preference" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_first_section">

        <CheckBoxPreference
            android:defaultValue="@string/default_checkbox_preference"
            android:key="checkbox_preference"
            android:title="@string/title_checkbox_preference" />

        <EditTextPreference
            android:dependency="checkbox_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:title="@string/title_edittext_preference" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_second_section">

        <Preference android:title="@string/title_intent_preference">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://codepath.com/" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>